# muslin

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
backend/: .env.example  conftest.py  main.py  pyproject.toml
backend/lib/: grading.py  measurements.py  pattern_ops.py  pattern_registry.py  utils.py
backend/lib/body_model/: shape_mapping.py  smpl_mesh.py
backend/lib/cascade/: constants.py  fba.py  prompts.py  swayback.py  types.py
backend/lib/diagnosis/: __init__.py  agent.py  anthropic_agent.py  multi_agent.py  prompts.py
backend/lib/export/: __init__.py  pdf_export.py  svg_export.py
backend/lib/photos/: __init__.py  store.py  validate.py
backend/lib/segmentation/: passthrough_segmenter.py  replicate_segmenter.py  segmenter.py
backend/routes/: body.py  cascades.py  dev.py  diagnosis.py  measurements.py  patterns.py  photos.py
backend/tests/: test_cascade_prompts.py  test_dev_routes.py  test_export_pdf.py  test_export_svg.py  test_fba_cascade.py  test_grading.py  test_grading_route.py  test_hello_agent.py  test_hello_agent_route.py  test_main.py  test_measurements.py  test_multi_agent_integration.py  test_multi_agent_orchestration.py  test_multi_agent_parse.py  test_pattern_ops.py  test_pattern_registry.py  test_photo_lib.py  test_prompt_files.py  test_routes_body.py  test_routes_cascades.py  test_routes_diagnosis.py  test_routes_patterns_download.py  test_routes_photos.py  test_routes_photos_segment.py  test_sam2_segmenter.py  test_shape_mapping.py  test_smpl_mesh.py  test_swayback_cascade.py  test_utils.py
docs/: setup.md  (+1 more)
(+115 files in other folders)
